2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/MethodReference.cs: Make HasParameters virtual
	* Mono.Cecil/MethodSpecification.cs: Override HasParameters to make 
	sure we're tracking the same object as the Parameters property does.
	* Mono.Cecil/PropertyDefinition.cs: Implement HasParameters based on
	the GetMethod, SetMethod or its own parameter collection.
	* Mono.Cecil/PropertyReference.cs: Add abstract HasParameters property

2008-11-27  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ExternTypeCollection.cs: don't attach types as they
	are already attached to the current module.

2008-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/GenericParameter.cs,
	* Mono.Cecil/ICustomAttributeProvider.cs,
	* Mono.Cecil/CallSite.cs,
	* Mono.Cecil/IMethodSignature.cs,
	* Mono.Cecil/FunctionPointerType.cs,
	* Mono.Cecil/FieldDefinition.cs,
	* Mono.Cecil/TypeReference.cs,
	* Mono.Cecil/GenericInstanceMethod.cs,
	* Mono.Cecil/IHasSecurity.cs,
	* Mono.Cecil/MethodReturnType.cs,
	* Mono.Cecil/AssemblyDefinition.cs,
	* Mono.Cecil/TypeDefinition.cs,
	* Mono.Cecil/MethodDefinition.cs,
	* Mono.Cecil/EventDefinition.cs,
	* Mono.Cecil/ModuleDefinition.cs,
	* Mono.Cecil/MethodReference.cs,
	* Mono.Cecil/ReflectionWriter.cs,
	* Mono.Cecil/ParameterDefinition.cs,
	* Mono.Cecil/PropertyDefinition.cs,
	* Mono.Cecil/IGenericParameterProvider.cs:
		Add boolean Has{x} properties so Cecil consumers are able
		to avoid the lazy allocations that would be made for an
		empty {x}. Use the Has{x} properties inside Cecil (some
		cases might be missing).

2008-11-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/TypeDefinition.cs (IsValueType): Inline the call to
	IsEnum and remove the double null check being done.

2008-11-14  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ParameterAttributes.cs: add Retval and Lcid.
	* Mono.Cecil/ParameterDefinition.cs: add Is* property accordingly.

2008-11-12  Jb Evain  <jbevain@novell.com>
